--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-preset-stage-1": "^6.1.18",
+    "express": "^4.16.3",
     "lodash": "^4.17.11",
     "react": "16.3.2",
     "react-dom": "16.3.2",
