--- a/package.json
+++ b/package.json
@@ -24,8 +24,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-preset-stage-1": "^6.1.18",
+    "chai": "^4.2.0",
+    "chai-jquery": "^2.0.0",
     "express": "^4.16.3",
+    "jquery": "^3.3.1",
+    "jsdom": "^12.0.0",
     "lodash": "^4.17.11",
+    "mocha": "^5.2.0",
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-google-maps": "^9.4.5",
